// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Session /> > renders a finished session 1`] = `
<div
  className="_block_17898c _session_634806"
>
  <svg
    aria-label="Unknown device type"
    className="_icon_e677aa"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 21C4.45 21 3.97917 20.8042 3.5875 20.4125C3.19583 20.0208 3 19.55 3 19V5C3 4.45 3.19583 3.97917 3.5875 3.5875C3.97917 3.19583 4.45 3 5 3H19C19.55 3 20.0208 3.19583 20.4125 3.5875C20.8042 3.97917 21 4.45 21 5V19C21 19.55 20.8042 20.0208 20.4125 20.4125C20.0208 20.8042 19.55 21 19 21H5ZM5 19H19V5H5V19Z"
      fill="currentColor"
    />
    <path
      d="M11 10C11 9.44772 11.4477 9 12 9C12.5523 9 13 9.44772 13 10C13 10.3772 12.7915 10.7072 12.4788 10.8784C12.1685 11.0482 11.8204 11.2907 11.5387 11.6191C11.2528 11.9526 11 12.4196 11 13C11 13.5523 11.4477 14 12 14C12.5502 14 12.9966 13.5556 13 13.0062C13.0038 12.9954 13.017 12.9676 13.0569 12.9211C13.1336 12.8316 13.265 12.7281 13.4392 12.6327C14.3671 12.1247 15 11.137 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 10.5523 9.44772 11 10 11C10.5523 11 11 10.5523 11 10ZM12.9986 13.0115C12.9986 13.0115 12.9992 13.0101 12.9996 13.0074L12.9986 13.0115Z"
      fill="currentColor"
    />
    <path
      d="M12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17Z"
      fill="currentColor"
    />
  </svg>
  <div
    className="_container_634806"
  >
    <h6
      className="_font-body-md-semibold_1jx6b_64 _sessionName_634806"
      title="session-id"
    >
      session-id
    </h6>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
    >
      Signed in 
      <time
        dateTime="2023-06-29T03:35:17Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
      data-finished={true}
    >
      Finished 
      <time
        dateTime="2023-06-29T03:35:19Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
  </div>
</div>
`;

exports[`<Session /> > renders an active session 1`] = `
<div
  className="_block_17898c _session_634806"
>
  <svg
    aria-label="Unknown device type"
    className="_icon_e677aa"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 21C4.45 21 3.97917 20.8042 3.5875 20.4125C3.19583 20.0208 3 19.55 3 19V5C3 4.45 3.19583 3.97917 3.5875 3.5875C3.97917 3.19583 4.45 3 5 3H19C19.55 3 20.0208 3.19583 20.4125 3.5875C20.8042 3.97917 21 4.45 21 5V19C21 19.55 20.8042 20.0208 20.4125 20.4125C20.0208 20.8042 19.55 21 19 21H5ZM5 19H19V5H5V19Z"
      fill="currentColor"
    />
    <path
      d="M11 10C11 9.44772 11.4477 9 12 9C12.5523 9 13 9.44772 13 10C13 10.3772 12.7915 10.7072 12.4788 10.8784C12.1685 11.0482 11.8204 11.2907 11.5387 11.6191C11.2528 11.9526 11 12.4196 11 13C11 13.5523 11.4477 14 12 14C12.5502 14 12.9966 13.5556 13 13.0062C13.0038 12.9954 13.017 12.9676 13.0569 12.9211C13.1336 12.8316 13.265 12.7281 13.4392 12.6327C14.3671 12.1247 15 11.137 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 10.5523 9.44772 11 10 11C10.5523 11 11 10.5523 11 10ZM12.9986 13.0115C12.9986 13.0115 12.9992 13.0101 12.9996 13.0074L12.9986 13.0115Z"
      fill="currentColor"
    />
    <path
      d="M12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17Z"
      fill="currentColor"
    />
  </svg>
  <div
    className="_container_634806"
  >
    <h6
      className="_font-body-md-semibold_1jx6b_64 _sessionName_634806"
      title="session-id"
    >
      session-id
    </h6>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
    >
      Signed in 
      <time
        dateTime="2023-06-29T03:35:17Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
  </div>
</div>
`;

exports[`<Session /> > renders ip address 1`] = `
<div
  className="_block_17898c _session_634806"
>
  <svg
    aria-label="Unknown device type"
    className="_icon_e677aa"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 21C4.45 21 3.97917 20.8042 3.5875 20.4125C3.19583 20.0208 3 19.55 3 19V5C3 4.45 3.19583 3.97917 3.5875 3.5875C3.97917 3.19583 4.45 3 5 3H19C19.55 3 20.0208 3.19583 20.4125 3.5875C20.8042 3.97917 21 4.45 21 5V19C21 19.55 20.8042 20.0208 20.4125 20.4125C20.0208 20.8042 19.55 21 19 21H5ZM5 19H19V5H5V19Z"
      fill="currentColor"
    />
    <path
      d="M11 10C11 9.44772 11.4477 9 12 9C12.5523 9 13 9.44772 13 10C13 10.3772 12.7915 10.7072 12.4788 10.8784C12.1685 11.0482 11.8204 11.2907 11.5387 11.6191C11.2528 11.9526 11 12.4196 11 13C11 13.5523 11.4477 14 12 14C12.5502 14 12.9966 13.5556 13 13.0062C13.0038 12.9954 13.017 12.9676 13.0569 12.9211C13.1336 12.8316 13.265 12.7281 13.4392 12.6327C14.3671 12.1247 15 11.137 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 10.5523 9.44772 11 10 11C10.5523 11 11 10.5523 11 10ZM12.9986 13.0115C12.9986 13.0115 12.9992 13.0101 12.9996 13.0074L12.9986 13.0115Z"
      fill="currentColor"
    />
    <path
      d="M12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17Z"
      fill="currentColor"
    />
  </svg>
  <div
    className="_container_634806"
  >
    <h6
      className="_font-body-md-semibold_1jx6b_64 _sessionName_634806"
      title="session-id"
    >
      session-id
    </h6>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
    >
      Signed in 
      <time
        dateTime="2023-06-29T03:35:17Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
      data-finished={true}
    >
      Finished 
      <time
        dateTime="2023-06-29T03:35:19Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_font-body-sm-regular_1jx6b_40 _sessionMetadata_634806"
    >
      127.0.0.1
    </p>
    <p
      className="_font-body-sm-regular_1jx6b_40 _sessionMetadata_634806"
    >
       
      <span
        className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
      >
        Element
      </span>
    </p>
  </div>
</div>
`;

exports[`<Session /> > uses client name when truthy 1`] = `
<div
  className="_block_17898c _session_634806"
>
  <svg
    aria-label="Unknown device type"
    className="_icon_e677aa"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 21C4.45 21 3.97917 20.8042 3.5875 20.4125C3.19583 20.0208 3 19.55 3 19V5C3 4.45 3.19583 3.97917 3.5875 3.5875C3.97917 3.19583 4.45 3 5 3H19C19.55 3 20.0208 3.19583 20.4125 3.5875C20.8042 3.97917 21 4.45 21 5V19C21 19.55 20.8042 20.0208 20.4125 20.4125C20.0208 20.8042 19.55 21 19 21H5ZM5 19H19V5H5V19Z"
      fill="currentColor"
    />
    <path
      d="M11 10C11 9.44772 11.4477 9 12 9C12.5523 9 13 9.44772 13 10C13 10.3772 12.7915 10.7072 12.4788 10.8784C12.1685 11.0482 11.8204 11.2907 11.5387 11.6191C11.2528 11.9526 11 12.4196 11 13C11 13.5523 11.4477 14 12 14C12.5502 14 12.9966 13.5556 13 13.0062C13.0038 12.9954 13.017 12.9676 13.0569 12.9211C13.1336 12.8316 13.265 12.7281 13.4392 12.6327C14.3671 12.1247 15 11.137 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 10.5523 9.44772 11 10 11C10.5523 11 11 10.5523 11 10ZM12.9986 13.0115C12.9986 13.0115 12.9992 13.0101 12.9996 13.0074L12.9986 13.0115Z"
      fill="currentColor"
    />
    <path
      d="M12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17Z"
      fill="currentColor"
    />
  </svg>
  <div
    className="_container_634806"
  >
    <h6
      className="_font-body-md-semibold_1jx6b_64 _sessionName_634806"
      title="session-id"
    >
      session-id
    </h6>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
    >
      Signed in 
      <time
        dateTime="2023-06-29T03:35:17Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
      data-finished={true}
    >
      Finished 
      <time
        dateTime="2023-06-29T03:35:19Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_font-body-sm-regular_1jx6b_40 _sessionMetadata_634806"
    >
      <img
        alt="Element"
        className="_avatar_39aee3"
        referrerPolicy="no-referrer"
        src="https://client.org/logo.png"
        style={
          {
            "--mas-avatar-size": "var(--cpd-space-4x)",
          }
        }
      />
       
      <span
        className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
      >
        Element
      </span>
    </p>
  </div>
</div>
`;

exports[`<Session /> > uses session name when truthy 1`] = `
<div
  className="_block_17898c _session_634806"
>
  <svg
    aria-label="Unknown device type"
    className="_icon_e677aa"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 21C4.45 21 3.97917 20.8042 3.5875 20.4125C3.19583 20.0208 3 19.55 3 19V5C3 4.45 3.19583 3.97917 3.5875 3.5875C3.97917 3.19583 4.45 3 5 3H19C19.55 3 20.0208 3.19583 20.4125 3.5875C20.8042 3.97917 21 4.45 21 5V19C21 19.55 20.8042 20.0208 20.4125 20.4125C20.0208 20.8042 19.55 21 19 21H5ZM5 19H19V5H5V19Z"
      fill="currentColor"
    />
    <path
      d="M11 10C11 9.44772 11.4477 9 12 9C12.5523 9 13 9.44772 13 10C13 10.3772 12.7915 10.7072 12.4788 10.8784C12.1685 11.0482 11.8204 11.2907 11.5387 11.6191C11.2528 11.9526 11 12.4196 11 13C11 13.5523 11.4477 14 12 14C12.5502 14 12.9966 13.5556 13 13.0062C13.0038 12.9954 13.017 12.9676 13.0569 12.9211C13.1336 12.8316 13.265 12.7281 13.4392 12.6327C14.3671 12.1247 15 11.137 15 10C15 8.34315 13.6569 7 12 7C10.3431 7 9 8.34315 9 10C9 10.5523 9.44772 11 10 11C10.5523 11 11 10.5523 11 10ZM12.9986 13.0115C12.9986 13.0115 12.9992 13.0101 12.9996 13.0074L12.9986 13.0115Z"
      fill="currentColor"
    />
    <path
      d="M12 17C12.5523 17 13 16.5523 13 16C13 15.4477 12.5523 15 12 15C11.4477 15 11 15.4477 11 16C11 16.5523 11.4477 17 12 17Z"
      fill="currentColor"
    />
  </svg>
  <div
    className="_container_634806"
  >
    <h6
      className="_font-body-md-semibold_1jx6b_64 _sessionName_634806"
      title="session-id"
    >
      test session name
    </h6>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
    >
      Signed in 
      <time
        dateTime="2023-06-29T03:35:17Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
    <p
      className="_font-body-sm-semibold_1jx6b_45 _sessionMetadata_634806"
      data-finished={true}
    >
      Finished 
      <time
        dateTime="2023-06-29T03:35:19Z"
      >
        Thu, 29 Jun 2023, 03:35
      </time>
    </p>
  </div>
</div>
`;
